migration creation and bug fix

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
+    <title>Music Dhoom</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
@@ -13,5 +13,15 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      var windowTopBar = document.createElement('div')
+      windowTopBar.style.width = '100%'
+      windowTopBar.style.height = '32px'
+      windowTopBar.style.backgroundColor = '#000'
+      windowTopBar.style.position = 'absolute'
+      windowTopBar.style.top = windowTopBar.style.left = 0
+      windowTopBar.style.webkitAppRegion = 'drag'
+      document.body.appendChild(windowTopBar)
+    </script>
   </body>
 </html>
